--- a/the-health-hero-frontend/package.json
+++ b/the-health-hero-frontend/package.json
@@ -15,6 +15,8 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "react-router-dom": "^6.28.1"
   }
 }
